--- a/TaskManager/DataLair/App.config
+++ b/TaskManager/DataLair/App.config
@@ -14,4 +14,10 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="DbTaskManagerConnection" connectionString="data source=localhost;initial catalog=DbTaskManager;
+         integrated security=True;
+         App=Test"
+         providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
