--- a/TaskManager/TaskManager/TaskManager.csproj
+++ b/TaskManager/TaskManager/TaskManager.csproj
@@ -105,6 +105,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DataLair\DataLair.csproj">
+      <Project>{a7142518-afae-4f49-a338-f96194b84aa0}</Project>
+      <Name>DataLair</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
