--- a/TaskManager/server/server.csproj
+++ b/TaskManager/server/server.csproj
@@ -117,6 +117,12 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DataLair\DataLair.csproj">
+      <Project>{a7142518-afae-4f49-a338-f96194b84aa0}</Project>
+      <Name>DataLair</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
