--- a/TaskManager/TaskManager/App.config
+++ b/TaskManager/TaskManager/App.config
@@ -3,4 +3,10 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+  <connectionStrings>
+    <add name="DbTaskManagerConnection" connectionString="data source=localhost;initial catalog=DbTaskManager;
+         integrated security=True;
+         App=Test"
+         providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
