--- a/TaskManager/TaskManager/TaskManager.csproj
+++ b/TaskManager/TaskManager/TaskManager.csproj
@@ -66,6 +66,7 @@
     </ApplicationDefinition>
     <Compile Include="Helpers\Command.cs" />
     <Compile Include="ViewModel\LoginViewModel.cs" />
+    <Compile Include="ViewModel\SignUpViewModel.cs" />
     <Compile Include="View\SignUpPage.xaml.cs">
       <DependentUpon>SignUpPage.xaml</DependentUpon>
     </Compile>
