--- a/TaskManager/DataLair/App.config
+++ b/TaskManager/DataLair/App.config
@@ -5,8 +5,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DbTaskManager" connectionString="data source=(localdb)\MSSQLLocalDB;Initial Catalog=DbTaskManager.mdf;Integrated Security=True;"
-  providerName="System.Data.SqlClient"/>
+    <add name="DbTaskManager" connectionString="data source=localhost;initial catalog=DbTaskManager;
+         integrated security=True;
+         App=Test"
+         providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
