--- a/TaskManager/TaskManager/App.config
+++ b/TaskManager/TaskManager/App.config
@@ -4,12 +4,16 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <connectionStrings>
+    <add name="DbTaskManager" connectionString="data source=localhost;initial catalog=DbTaskManager;
+         integrated security=True;
+         App=Test"
+         providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
-  <connectionStrings>
-    <add name="DbTaskManager" connectionString="data source=(localdb)\MSSQLLocalDB;Initial Catalog=DbTaskManager.mdf;Integrated Security=True;" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+ 
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
