fixing db relationships

--- a/TaskManager/TaskManager/App.config
+++ b/TaskManager/TaskManager/App.config
@@ -5,8 +5,8 @@
   </configSections>
   <connectionStrings>
     <add name="DbTaskManager" connectionString="data source=localhost;initial catalog=DbTaskManager;
-         integrated security=True;
-         App=Test"
+         integrated security=false;
+         App=Test;user id=sa;password=student"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
