added window remind password

--- a/TaskManager/TaskManager/TaskManager.csproj
+++ b/TaskManager/TaskManager/TaskManager.csproj
@@ -75,7 +75,11 @@
     </ApplicationDefinition>
     <Compile Include="Helpers\Command.cs" />
     <Compile Include="ViewModel\LoginViewModel.cs" />
+    <Compile Include="ViewModel\RemindPasswordViewModel.cs" />
     <Compile Include="ViewModel\SignUpViewModel.cs" />
+    <Compile Include="View\RemindPasswordPage.xaml.cs">
+      <DependentUpon>RemindPasswordPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\SignUpPage.xaml.cs">
       <DependentUpon>SignUpPage.xaml</DependentUpon>
     </Compile>
@@ -91,6 +95,10 @@
       <DependentUpon>LoginView.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="View\RemindPasswordPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="View\SignUpPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
