added methods for mainviewcontext

--- a/TaskManager/server/server.csproj
+++ b/TaskManager/server/server.csproj
@@ -108,6 +108,7 @@
     <Compile Include="General.cs" />
     <Compile Include="IMainViewContext.cs" />
     <Compile Include="IGeneral.cs" />
+    <Compile Include="MainViewContext.cs" />
     <Compile Include="Result.cs" />
     <Compile Include="Service1.svc.cs">
       <DependentUpon>Service1.svc</DependentUpon>
