--- a/TaskManager/onsoleTestDB/App.config
+++ b/TaskManager/onsoleTestDB/App.config
@@ -11,12 +11,11 @@
          providerName="System.Data.SqlClient" />-->
     <add name="DbTaskManager" connectionString="data source=localhost;initial catalog=DbTaskManager;
          integrated security=True;
-         App=Test"
-         providerName="System.Data.SqlClient" />
-    <add name="DbEntities" connectionString="metadata=res://*/DataModel.csdl|res://*/DataModel.ssdl|res://*/DataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=DbTaskManager;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+         App=Test" providerName="System.Data.SqlClient"/>
+    <add name="DbEntities" connectionString="metadata=res://*/DataModel.csdl|res://*/DataModel.ssdl|res://*/DataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=DbTaskManager;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
   </connectionStrings>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2"/>
   </startup>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
