--- a/TaskManager/TaskManager/App.config
+++ b/TaskManager/TaskManager/App.config
@@ -8,9 +8,9 @@
          integrated security=false;
          App=Test;user id=sa;password=student"
          providerName="System.Data.SqlClient" />-->
-    <add name="DbTaskManager" connectionString="data source=localhost;initial catalog=DbTaskManager;
-         integrated security=True;
-         App=Test" providerName="System.Data.SqlClient"/>
+    <add name="DbTaskManager" connectionString="data source=localhost;initial catalog=DbTaskManager;&#xD;&#xA;         integrated security=True;&#xD;&#xA;         App=Test"
+
+                   providerName="System.Data.SqlClient"/>
     <add name="DbEntities" connectionString="metadata=res://*/DataModel.csdl|res://*/DataModel.ssdl|res://*/DataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=DbTaskManager;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
   </connectionStrings>
   <startup>
@@ -26,4 +26,20 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
   </entityFramework>
+  <system.serviceModel>
+    <bindings>
+      <netTcpBinding>
+        <binding name="NetTcpBinding_IGeneral" />
+      </netTcpBinding>
+    </bindings>
+    <client>
+      <endpoint address="net.tcp://localhost:30000/ep1" binding="netTcpBinding"
+        bindingConfiguration="NetTcpBinding_IGeneral" contract="GeneralService.IGeneral"
+        name="NetTcpBinding_IGeneral">
+        <identity>
+          <userPrincipalName value="student@step.lan" />
+        </identity>
+      </endpoint>
+    </client>
+  </system.serviceModel>
 </configuration>
